<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/constraint"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:id="@+id/linLay1"
            style="@style/linear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                style="@style/textView"
                android:text="@string/enter_height"
                android:layout_weight="3"/>

        <EditText
                android:id="@+id/etHeight"
                style="@style/editText"
                android:layout_weight="2"
                android:hint="@string/meters"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linLay2"
            style="@style/linear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linLay1">

        <TextView
                style="@style/textView"
                android:text="@string/enter_weight"
                android:layout_weight="3"/>

        <EditText
                android:id="@+id/etWidth"
                style="@style/editText"
                android:layout_weight="2"
                android:hint="@string/kilograms"/>

    </LinearLayout>

    <Button
            android:id="@+id/btnCalculate"
            style="@style/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linLay2"/>

    <LinearLayout
            android:id="@+id/linLay3"
            style="@style/linear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCalculate">

        <ImageView
                android:id="@+id/ivImage"
                android:layout_width="@dimen/match_linear"
                android:layout_height="@dimen/image_height"
                android:contentDescription="@string/image"
                android:layout_weight="1"/>

        <TextView
                android:id="@+id/tvDescription"
                style="@style/textView"
                android:textAlignment="center"
                android:layout_weight="1"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>